--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
             </Address>
         </p>
 <center><a href="https://maps.app.goo.gl/jjXmiGRUBZ5srhBy7" target="_blank">📍</a></center>
+
+<p> <b>Note: BUILDING WEBSITE FEATURES ARE UNDERPROCCESS </b></p>
     </footer>
 </body>
 </html> 
