--- a/Event.html
+++ b/Event.html
@@ -6,41 +6,35 @@
     <link rel="stylesheet" href="style.css">
     <a href="index.html" class="back-link" >← Back to Home Page</a>
     <div class="logo" >
-    <img src="image/Madhuvan Studio.png" width= "auto" height="100px" alt="Madhuvan Visuals Studio Logo">  </div>
+    <img src="Madhuvan-Studio.png" width= "auto" height="100px" alt="Madhuvan Visuals Studio Logo">  </div>
     <h1> Events Managed By Us: </h1> 
 </head>
 <body>
     <!-- Hero Section with Images -->
     <section class="hero">
-        <div class="photo"><img src="image/pro01.JPG" alt="Maternity Shoot"></div>
-        <div class="photo"><img src="image/pro 02.JPG" alt="Couple Shoot"></div>
-        <div class="photo"><img src="image/_DSC4000.JPG" alt="Pregnancy Photoshoot"></div>
-        <div class="photo"><img src="image/_DSC3847.JPG " alt="Creative Shoot"></div>
+        <div class="photo"><img src="_DSC3503.JPG" alt="Maternity Shoot"></div>
+        <div class="photo"><img src="_DSC3456.JPG" alt="Couple Shoot"></div>
+        <div class="photo"><img src="_DSC4000.JPG" alt="Pregnancy Photoshoot"></div>
+        <div class="photo"><img src="_DSC3847.JPG " alt="Creative Shoot"></div>
 
     </section>
   <!-- Gallery Section -->
     <section class="gallery">
     <h2>Our Event Highlights</h2>
-    <p>Memories captured from weddings, parties, and special occasions, 
-      “At Madhuvan Visuals, every photograph is more than just an image — it’s a memory frozen in time. From the joy of weddings and the laughter of parties to the charm of family celebrations and grand events, we capture moments that tell your unique story. Our gallery reflects the emotions, colors, and beauty of each occasion, so you can relive your special day again and again. Because memories may fade, but the magic of a picture lasts forever.”
-    </p>
-
     <div class="collage">
-      <img src="image/jay 02.JPG  " alt="Wedding Event">
-      <img src="image/Jaymala.JPG" alt="Birthday Event">
-      <img src="image/_DSC4016.JPG" alt="Concert">
-      <img src="image/Drown.JPG" alt="Corporate Event">
-      <img src="image/_DSC3804.JPG" alt="Festival">
-      <img src="image/_DSC3912.JPG" alt="Engagement Event">
+      <img src="jay 02.JPG  " alt="Wedding Event">
+      <img src="_DSC3808.JPG" alt="Birthday Event">
+      <img src="_DSC4016.JPG" alt="Concert">
+      <img src="Drown.JPG" alt="Corporate Event">
+      <img src="_DSC3804.JPG" alt="Festival">
+      <img src="_DSC3912.JPG" alt="Engagement Event">
     </div>
-       <h3>For Latest Update Follow Us: </h3>
-      <video width="400" height="300" controls>
-      <source  src="video/Hiite.mp4" type="video/mp4">
-      <br> </br>
-      </video>
-    </div>
+    <br></br>
 </section>
-        <footer>
+<p>Memories captured from weddings, parties, and special occasions.
+</p>
+
+      <footer>
         <p>© 2025 Madhuvan Visuals Studio  | Follow us on 
             <a href="https://www.instagram.com/madhuvanvisuals?igsh=MWltamVld2ttZHlzNA==" target="_blank" >Instagram</a> | 
             <a href="https://youtube.com/@madhuvanstudio8734?si=Imh5BRPc9ld_ikgR" target="_blank" >YouTube</a>
