--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <header>
     <section class="about">
     <a href="index.html" class="back-link" >← Back to Home Page</a>
-    <img src="image/Madhuvan Studio.png" width= "auto" height="100px" alt="Madhuvan Visuals Studio Logo">  </div>
+    <img src="Madhuvan-Studio.png" width= "auto" height="100px" alt="Madhuvan Visuals Studio Logo">  </div>
   <h2>About Us</h2>
   <br></br>
     </header>
