--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 
 <div class="content">
     <div class="contact-info">
-        <img src="image/Madhuvan Studio.png" width= "auto" height="100px" alt="Madhuvan Visuals Studio Logo">  </div>
+        <img src="Madhuvan-Studio.png" width= "auto" height="100px" alt="Madhuvan Visuals Studio Logo">  </div>
         <h2>Contact Information</h2>
         <hr />
         <p>You can reach Us through any of the following methods:</p>
