--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
      <!-- Header / Navigation -->
     <header>
         <div class="logo" >
-            <img src="image/Madhuvan Studio.png" width= "auto" height="100px" alt="Madhuvan Visuals Studio Logo">  </div>
+            <img src="Madhuvan-Studio.png" width= "auto" height="100px" alt="Madhuvan Visuals Studio Logo">  </div>
             <h1> Welcome to Madhuvan Visuals Studio </h1> 
             <hr  \> 
         <nav> 
@@ -38,11 +38,11 @@
 
     <section class="studio-gallery">
     <div class="Gallary">
-        <img src="image/01.png" alt="studio view 1">
+        <img src="01.png" alt="studio view 1">
         <br> </br>
-        <img src="image/02.png" alt="studio view 2">
+        <img src="02.png" alt="studio view 2">
         <br> </br>
-        <img src="image/03.png" alt="studio view 3">
+        <img src="03.png" alt="studio view 3">
         <br> </br>
     </div>
     </select>
